--- a/Mural/style.css
+++ b/Mural/style.css
@@ -27,7 +27,12 @@ div.card-header {
 
 div.card {
     border: 1px solid rgba(0, 0, 0, 0.219);
-    float: left; 
+    float: left;
+    max-width: 18rem;
+    margin-right: 15px;
+    height: 152px;
+    width: 251px;
+    overflow: auto;
 }
 
 div#enviar {
