--- a/Mural/style.css
+++ b/Mural/style.css
@@ -35,7 +35,7 @@ div.card {
     overflow: auto;
 }
 
-div#enviar {
+div#enviar, div#login_f {
     text-align: center;
     width: 400px;
 }
@@ -64,7 +64,7 @@ body::-webkit-scrollbar-thumb {
     border-radius: 9px;
 }
 
-h1#cab, ul#nav, div#enviar, div#pesquisar {
+h1#cab, ul#nav, div#enviar, div#pesquisar, div#login_f {
     font-family: 'FontePadrao';
 }
 
@@ -77,6 +77,7 @@ button.nav-link {
     margin-right: 25px;
     border-color: #0000005c;
 }
+
 button.btn-sm {
     padding-top: 4px;
     padding-bottom: 4px;
