--- a/Mural/style.css
+++ b/Mural/style.css
@@ -105,6 +105,28 @@ body {
     background-color: #fbfbfb
 }
 
-div#login_alert {
+div#alert {
     text-align: center;
+}
+
+.voltar-ao-topo {
+    position: fixed;
+    bottom: 1em;
+    right: 2em;
+    text-decoration: none;
+    color: black;
+    font-size: 12px;
+    padding: 1em;
+    padding-top: 2px;
+    padding-right: 5px;
+    padding-bottom: 2px;
+    padding-left: 5px;
+}
+.voltar-ao-topo:hover {
+    background-color: rgba(0, 0, 0, 0.055);
+    color: black;
+}
+
+.material-icons {
+    font-size: 40px;
 }
